syntax ="proto3";
package cs;
import "common.proto";

enum ID {
	ID_START = 0;
	ID_C2S_UserRegister = 10001;
	ID_S2C_UserRegister = 10002;
	
	ID_C2S_UserLogin = 10003;
	ID_S2C_UserLogin = 10004;
	
	ID_C2S_UserQuit = 10005;
	ID_S2C_UserQuit = 10006;
}

message C2S_UserRegister {
	UserInfo UserInfo=1;//填写帐号 密码
}

message S2C_UserRegister {
	int32 Result=1;//0注册成功 1存在敏感词 2账号或者密码长度不足 3账号已被注册

}

message C2S_UserLogin{
	UserInfo UserInfo=1;//填写帐号 密码
}

message S2C_UserLogin {
	int32 Result=1;//登录结果:0成功 1帐号不存在 2帐号密码不匹配 3保护冻结中 4封禁限制登录
	UserInfo UserInfo=2;//如果登录成功,则返回该实体
	RolesInfo RolesInfo=3;//角色信息

}

message C2S_UserQuit{
	UserInfo UserInfo=1;//如果登录成功,则返回该实体

}

message S2C_UserQuit{
	int32 Result=1;//结果:0成功
}

